--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,4 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/../painter" "${CMAKE_BINARY_DIR}/painter")
 
 add_executable(run run.cpp Tank.cpp ${SOURCES})
 target_include_directories(run PUBLIC "${CMAKE_SOURCE_DIR}/../painter")
-target_link_libraries(run Painter)
+target_link_libraries(run Core)
