--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,8 @@ if(Threads)
     message("Threads found!")
 endif()
 
-add_subdirectory("${CMAKE_SOURCE_DIR}/../painter" "${CMAKE_BINARY_DIR}/painter")
+add_subdirectory("${CMAKE_SOURCE_DIR}/../core" "${CMAKE_BINARY_DIR}/core")
 
 add_executable(run run.cpp Tank.cpp ${SOURCES})
-target_include_directories(run PUBLIC "${CMAKE_SOURCE_DIR}/../painter")
+target_include_directories(run PUBLIC "${CMAKE_SOURCE_DIR}/../core")
 target_link_libraries(run Core)
