--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,9 +17,13 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/../core" "${CMAKE_BINARY_DIR}/core")
 
 add_executable(run run.cpp Tank.cpp PainterLocal.cpp helpers.cpp Brain.cpp Ammo.cpp Map.cpp BaseAmmoTankFigure.cpp ${SOURCES} TankEnums.h Tile.h)
 add_executable(test test.cpp Map.cpp Tank.cpp Ammo.cpp BaseAmmoTankFigure.cpp ${SOURCES})
+add_executable(waveTest waveTest.cpp Map.cpp Tank.cpp Ammo.cpp BaseAmmoTankFigure.cpp ${SOURCES})
 
 target_include_directories(run PUBLIC "${CMAKE_SOURCE_DIR}/../core")
 target_link_libraries(run Core ${CMAKE_THREAD_LIBS_INIT})
 
 target_include_directories(test PUBLIC "${CMAKE_SOURCE_DIR}/../core")
 target_link_libraries(test Core ${CMAKE_THREAD_LIBS_INIT})
+
+target_include_directories(waveTest PUBLIC "${CMAKE_SOURCE_DIR}/../core")
+target_link_libraries(waveTest Core ${CMAKE_THREAD_LIBS_INIT})
